src/test/ui/feature-gates/feature-gate-unwind-attributes.stderr
error[E0658]: #[unwind] is experimental (see issue #58760)
  --> $DIR/feature-gate-unwind-attributes.rs:11:5
   |
LL |     #[unwind(allowed)] //~ ERROR #[unwind] is experimental
   |     ^^^^^^^^^^^^^^^^^^
   |
   = help: add #![feature(unwind_attributes)] to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
